--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello I'm Frontend Developer</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat dolores modi reprehenderit accusantium explicabo autem neque, nulla sed. Soluta repellat nulla obcaecati dolores, dignissimos esse repellendus voluptates saepe molestiae inventore!</p>
 </body>
 </html>
