--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day1
-    </title>
+    <title>CSS</title>
+    <!-- External Css -->
+    <link rel="stylesheet" href="./index.css">
+    <!-- Internal Style -->
 </head>
 <body>
-    <h1>Hello I'm Frontend Developer</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat dolores modi reprehenderit accusantium explicabo autem neque, nulla sed. Soluta repellat nulla obcaecati dolores, dignissimos esse repellendus voluptates saepe molestiae inventore!</p>
-     <form action="">
-        <label for=""></label>
-        <input type="text">
-     </form>
-
+   
 </body>
 </html>
