--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello I'm Frontend Developer</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat dolores modi reprehenderit accusantium explicabo autem neque, nulla sed. Soluta repellat nulla obcaecati dolores, dignissimos esse repellendus voluptates saepe molestiae inventore!</p>
+    <button style="color: blue;">SinIn</button>
 </body>
 </html>
